move last check icon to the left to avoid scrollbar

--- a/menu/menu.css
+++ b/menu/menu.css
@@ -100,8 +100,8 @@ header{
 	left:1px;
 }
 #time-since{
-	float:right;
-	margin-right:4px;
+	float:left;
+	margin-left:4px;
 }
 .hidden{
 	display:none;
